--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.nature.hub</groupId>
@@ -10,7 +12,7 @@
     <description>GO Main components 1</description>
 
     <properties>
-        <commons.version>0.0.10</commons.version>
+        <commons.version>0.0.1</commons.version>
         <scala.version>2.11.7</scala.version>
         <junit-version>4.11</junit-version>
     </properties>
@@ -58,8 +60,9 @@
         </repository>
     </repositories>
     <scm>
-    <developerConnection>scm:git:git@github.com:antmyth/go-main1.git</developerConnection>
-    <tag>go-main1-0.0.1</tag>
+        <connection>scm:git:git@github.com:antmyth/go-main1.git</connection>
+        <developerConnection>scm:git:git@github.com:antmyth/go-main1.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
     <build>
         <plugins>
